--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -6323,6 +6323,7 @@ file-uploads=Качване на файл
 file-url=URL адрес на файл (Automatic Translation)
 file-version-is-invalid=Версията на файла е невалидна. (Automatic Translation)
 files=Файл
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Попълнете следната форма, за да получите указания за посока към
 filter=Филтри
 filter-and-order=Филтриране и поръчка (Automatic Translation)
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=Файлът е обработен правил
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Файловете са импортирани правилно. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Фирмата не може да бъде изтрита, защото тя е свързана с проекти.
 the-firm-could-not-be-found=Фирмата не може да бъде намерена.
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Качване на сертификат (Automatic Translation)
 upload-completed=Качването е завършено
 upload-definition=Определение за качване (Automatic Translation)
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Качване на документ
 upload-documents-no-larger-than-3000-k=Качване на документи не по-големи от 3000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Качване на документи, не по-големи от {0}.
