--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -6323,6 +6323,7 @@ file-uploads=Nahrané soubory
 file-url=Adresa URL souboru (Automatic Translation)
 file-version-is-invalid=Verze souboru je neplatná.
 files=Soubory
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Vyplňte následující formulář pro vyhledání cesty do
 filter=Filtr
 filter-and-order=Filtrování a objednávání (Automatic Translation)
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=Soubor byl zpracován správně. (Automatic Tra
 the-file-x-cannot-be-imported=Soubor <em>{0}</em> nemůže být importován.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=Soubor <em>{0}</em> nemůže být uložen.
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Soubory byly importovány správně. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Firma nemůže být smazána, neboť je asociována s projektem.
 the-firm-could-not-be-found=Firma nebyla nalezena.
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Odeslat certifikát (Automatic Translation)
 upload-completed=Nahrávání dokončeno
 upload-definition=Nahrát definici
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Nahrát dokument
 upload-documents-no-larger-than-3000-k=Nahrát dokumenty ne větší než 3000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Není možno nahrát větší dokumenty než {0}.
