--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -6323,6 +6323,7 @@ file-uploads=Datei-Uploads
 file-url=Datei-URL
 file-version-is-invalid=Dateiversion ist nicht gültig.
 files=Dateien
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Füllen Sie das folgende Formular aus, um eine Wegbeschreibung zum folgenden Ziel zu bekommen:
 filter=Filter
 filter-and-order=Filtern und sortieren
@@ -14860,7 +14861,6 @@ the-file-was-processed-correctly=Die Datei wurde richtig verarbeitet.
 the-file-x-cannot-be-imported=Die Datei <em>{0}</em> kann nicht importiert werden.
 the-file-x-cannot-be-inspected=Die Datei {0} kann nicht geprüft werden.
 the-file-x-cannot-be-saved=Die Datei <em>{0}</em> kann nicht gespeichert werden.
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Die Dateien wurden richtig importiert.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Die Firma konnte nicht gelöscht werden, weil sie verknüpfte Projekte besitzt.
 the-firm-could-not-be-found=Die Firma konnte nicht gefunden werden.
@@ -16507,7 +16507,7 @@ upload-another-file=Andere Datei hochladen
 upload-certificate=Zertifikat hochladen
 upload-completed=Erfolgreich hochgeladen
 upload-definition=Definition hochladen
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Dokument hochladen
 upload-documents-no-larger-than-3000-k=Laden Sie Dokumente hoch, die eine Größe von 3.000 k nicht überschreiten.
 upload-documents-no-larger-than-x=Laden Sie Dokumente hoch, die eine Größe von {0} nicht überschreiten.
