--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -6323,6 +6323,7 @@ file-uploads=Ανεβάσματα αρχείων
 file-url=Διεύθυνση URL αρχείου (Automatic Translation)
 file-version-is-invalid=Η έκδοση του αρχείου δεν είναι έγκυρη.
 files=Αρχείο
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Συμπληρώστε την ακόλουθη φόρμα για να πάρετε κατευθύνσεις οδήγησης
 filter=Φίλτρο
 filter-and-order=Φιλτράρισμα και παραγγελία (Automatic Translation)
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=Η επεξεργασία του αρχείου
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Τα αρχεία εισήχθησαν σωστά. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Η εταιρεία δεν μπορεί να διαγραφεί διότι έχει συσχετισμένα έργα.
 the-firm-could-not-be-found=Η εταιρεία δεν βρέθηκε.
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Αποστολή πιστοποιητικού (Automatic Translation)
 upload-completed=Το ανέβασμα ολοκληρώθηκε
 upload-definition=Ορισμός αποστολής (Automatic Translation)
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Ανέβασμα εγγράφου
 upload-documents-no-larger-than-3000-k=Ανεβάστε έγγραφα όχι μεγαλύτερα από 3.000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Ανεβάστε έγγραφα όχι μεγαλυτέρα από {0}.
