--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -6323,6 +6323,7 @@ file-uploads=Faili üleslaadimised
 file-url=Faili URL (Automatic Translation)
 file-version-is-invalid=Faili versioon ei sobi. (Automatic Translation)
 files=Fail
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Täida järnev blankett, et saada sõidujuhised asukohta
 filter=Filtrid
 filter-and-order=Filtreeri ja telli (Automatic Translation)
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=Faili töödeldi õigesti. (Automatic Translati
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Failid imporditi õigesti. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Firmat ei saa kustutada, kuna sellega on seotud projektid.
 the-firm-could-not-be-found=Firmat ei leitud.
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Laadi sert üles (Automatic Translation)
 upload-completed=Üleslaadimine lõpetatud
 upload-definition=Laadi definitsioon üles (Automatic Translation)
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Laadi üles dokument
 upload-documents-no-larger-than-3000-k=Laadige üles kuni 3000 k. (Automatic Translation)
 upload-documents-no-larger-than-x=Laadi üles dokumendid, mille suurus on kuni {0}.
