--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -6323,6 +6323,7 @@ file-uploads=بارگذاری فایل
 file-url=آدرس فایل
 file-version-is-invalid=نسخه‌ی فایل معتبر نمی‌باشد.
 files=فایل
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=فرم زیر را پر کنید
 filter=فیلتر
 filter-and-order=فیلتر کردن و مرتب سازی
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=پرونده به درستی پردازش شد.
 the-file-x-cannot-be-imported=فایل <em>{0}</em> نمی‌تواند ارسال شود.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=فایل <em>{0}</em> نمی‌تواند ذخیره شود.
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=فایل ها به درستی بارگذاری شده اند.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=این شرکت را نمی‌توان حذف کرد زیرا پروژه هایی به آن تخصیص داده شده است.
 the-firm-could-not-be-found=شرکت یافت نشد.
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=آپلود گواهی (Automatic Translation)
 upload-completed=بارگذاری کامل شد
 upload-definition=بارگذاری تعاریف
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=بارگذاری سند
 upload-documents-no-larger-than-3000-k=آپلود اسناد بزرگتر از 3000k. (Automatic Translation)
 upload-documents-no-larger-than-x=بارگذاری اسناد حداکثر به اندازه {0}.
