--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -6323,6 +6323,7 @@ file-uploads=Tiedoston Lataukset
 file-url=Tiedoston URL
 file-version-is-invalid=Tiedostoversio on virheellinen.
 files=Tiedostot
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Täytä lomake saadaksesi ajo-ohjeet kohteeseen
 filter=Suodatin
 filter-and-order=Suodata ja järjestä
@@ -14856,7 +14857,6 @@ the-file-was-processed-correctly=Tiedosto käsiteltiin oikein.
 the-file-x-cannot-be-imported=Tiedostoa <em>{0}</em> ei voi tuoda.
 the-file-x-cannot-be-inspected=Tiedostoa {0} ei voi tarkastaa.
 the-file-x-cannot-be-saved=Tiedostoa <em>{0}</em> ei voi tallentaa.
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Tiedostot tuotiin oikein.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Yritystä ei voi poistaa koska siihen liittyy projekteja.
 the-firm-could-not-be-found=Yritystä ei löydy.
@@ -16503,7 +16503,7 @@ upload-another-file=Lataa toinen tiedosto
 upload-certificate=Lataa Varmenne
 upload-completed=Lataus valmis
 upload-definition=Päivitä määrittely
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Lataa dokumentti
 upload-documents-no-larger-than-3000-k=Lataa dokumentteja, jotka eivät ole suurempia kuin 3 000 kt.
 upload-documents-no-larger-than-x=Lataa dokumentteja, jotka eivät ole suurempia kuin {0}.
