--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -6323,6 +6323,7 @@ file-uploads=फ़ाइल अपलोड
 file-url=फाइल यूआरएल (Automatic Translation)
 file-version-is-invalid=फ़ाइल संस्करण अमान्य है। (Automatic Translation)
 files=फाइल्स
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=आगे की दिशा पाने के लिए निम्नलिखित फार्म को फिल करे
 filter=फिल्टर
 filter-and-order=फ़िल्टर और ऑर्डर (Automatic Translation)
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=फाइल पर सही ढंग से 
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=फाइलों का सही आयात किया गया । (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=फर्म delete नही हो सकती क्योकि यह प्रॉजेक्ट से associated है|
 the-firm-could-not-be-found=Firm पायी नहीं जा सकी|
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=अपलोड प्रमाण पत्र (Automatic Translation)
 upload-completed=अपलोड Completed
 upload-definition=परिभाषा अपलोड करें (Automatic Translation)
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=अपलोड Document
 upload-documents-no-larger-than-3000-k=दस्तावेज़ अपलोड करें जो 3,000k से बड़ा नहीं है। (Automatic Translation)
 upload-documents-no-larger-than-x=अपलोड documents no larger than {0}.
