--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -6323,6 +6323,7 @@ file-uploads=Upload file
 file-url=URL Berkas (Automatic Translation)
 file-version-is-invalid=Versi File tidak valid.
 files=File-file
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Isi formulir berikut ini untuk mendapatkan petunjuk arah ke
 filter=Filter (Automatic Translation)
 filter-and-order=Filter dan Urutan (Automatic Translation)
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=Berkas ini telah diproses dengan benar. (Automa
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Berkas diimpor dengan benar. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Perusahaan tidak dapat dihapus karena memiliki proyek terkait.
 the-firm-could-not-be-found=Perusahaan tidak dapat ditemukan.
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Unggah Sertifikat (Automatic Translation)
 upload-completed=Upload Selesai
 upload-definition=Definisi Unggah (Automatic Translation)
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Upload Dokumen
 upload-documents-no-larger-than-3000-k=Unggah dokumen tidak lebih besar dari 3, 000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Meng-Upload dokumen tidak lebih besar dari{0}.
