--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -6322,6 +6322,7 @@ file-uploads=Caricamento dei File
 file-url=File URL (Automatic Translation)
 file-version-is-invalid=Versione del file non valida.
 files=File
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Riempi il modulo seguente per ottenere le direzioni di marcia per
 filter=Filtra
 filter-and-order=Filtra e ordina
@@ -14859,7 +14860,6 @@ the-file-was-processed-correctly=Il file è stato elaborato correttamente. (Auto
 the-file-x-cannot-be-imported=Il file <em>{0}</em> non può essere importato.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=Il file <em>{0}</em> non può essere salvato.
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=File importati correttamente.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=La ditta non può essere cancellata perché ha dei progetti associati.
 the-firm-could-not-be-found=La ditta non è stata trovata.
@@ -16506,7 +16506,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Carica certificato (Automatic Translation)
 upload-completed=Caricamento Completato
 upload-definition=Carica Definizione
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Carica Documento
 upload-documents-no-larger-than-3000-k=Carica documenti non più grandi di 3.000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Carica documenti non superiori a {0}.
