--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -6323,6 +6323,7 @@ file-uploads=파일은 올려주기한다
 file-url=파일 URL (Automatic Translation)
 file-version-is-invalid=파일 버전이 잘못되었습니다. (Automatic Translation)
 files=파일
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=모는 방향을에 얻기 위하여 밖으로 뒤에 오는 모양을 채우십시
 filter=여과기
 filter-and-order=필터 및 주문 (Automatic Translation)
@@ -14857,7 +14858,6 @@ the-file-was-processed-correctly=파일이 올바르게 처리되었습니다. (
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=파일이 올바르게 가져온 것입니다. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=계획사업을 회합했기 때문에 상사는
 the-firm-could-not-be-found=상사는 발견될 수 없었다.
@@ -16504,7 +16504,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=인증서 업로드 (Automatic Translation)
 upload-completed=완료되는 올려주기
 upload-definition=정의 업로드 (Automatic Translation)
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=올려주기 문서
 upload-documents-no-larger-than-3000-k=3,000k 이하의 문서를 업로드합니다. (Automatic Translation)
 upload-documents-no-larger-than-x=Upload documents no larger than {0}. (Automatic Copy)
