--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -6323,6 +6323,7 @@ file-uploads=Filopplastinger
 file-url=URL-adresse for fil (Automatic Translation)
 file-version-is-invalid=Filversjonen er ugyldig.
 files=Filer
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Fyll inn skjemaet for å få vegbeskrivelsen til
 filter=Filter (Automatic Translation)
 filter-and-order=Filtrer og bestill (Automatic Translation)
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=Filen ble behandlet på riktig måte. (Automati
 the-file-x-cannot-be-imported=Filen <em>{0}</em> kan ikke importeres.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=Filen <em>{0}</em> kan ikke lagres.
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Filene ble importert.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Firmaet kan ikke slettes da det har assosierte prosjekt.
 the-firm-could-not-be-found=Firmaet ble ikke funnet.
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Last opp sertifikat (Automatic Translation)
 upload-completed=Opplastning utført
 upload-definition=Last opp definisjon
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Last opp dokument
 upload-documents-no-larger-than-3000-k=Last opp dokumenter som ikke er større enn 3000 k. (Automatic Translation)
 upload-documents-no-larger-than-x=Last opp dokumenter som ikke er større enn {0}.
