--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -6323,6 +6323,7 @@ file-uploads=Wgrania pliku
 file-url=Adres URL pliku (Automatic Translation)
 file-version-is-invalid=Wersja pliku nie jest prawidłowa.
 files=Pliki
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Wypełnij następujący formularz aby uzyskać wskazówki dojazdu do
 filter=Filtruj
 filter-and-order=Filtr i kolejność (Automatic Translation)
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=Plik został poprawnie przetworzony. (Automatic
 the-file-x-cannot-be-imported=Plik <em>{0}</em> nie może być zaimportowany.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=Plik <em>{0}</em> nie może być zapisany.
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Pliki zostały poprawnie zaimportowane. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Nie można usunąć firmy, ponieważ są z nią skojarzone projekty.
 the-firm-could-not-be-found=Firma nie została znaleziona.
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Przekaż certyfikat (Automatic Translation)
 upload-completed=Ładowanie zakończone
 upload-definition=Wgraj definicje
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Załaduj dokument
 upload-documents-no-larger-than-3000-k=Prześlij dokumenty nie większe niż 3000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Załaduj dokumenty nie większe niż {0}.
