--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -6323,6 +6323,7 @@ file-uploads=Carregamento de Ficheiros
 file-url=URL do arquivo (Automatic Translation)
 file-version-is-invalid=A versão do ficheiro é inválida.
 files=Ficheiros
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Preencha o seguinte formulário para obter direcções para
 filter=Filtro
 filter-and-order=Filter and Order (Automatic Copy)
@@ -14860,7 +14861,6 @@ the-file-was-processed-correctly=O arquivo foi processado corretamente. (Automat
 the-file-x-cannot-be-imported=O ficheiro <em>{0}</em> não pode ser importado.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=O ficheiro <em>{0}</em> não pode ser salvo.
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Os arquivos foram importados corretamente. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=A empresa não pode ser removida porque tem projetos associados.
 the-firm-could-not-be-found=Não foi possível encontrar a empresa.
@@ -16507,7 +16507,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Certificado de upload (Automatic Translation)
 upload-completed=Upload Completo
 upload-definition=Upload de Definição
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Upload de Documento
 upload-documents-no-larger-than-3000-k=Envie documentos não superiores a 3.000 mil. (Automatic Translation)
 upload-documents-no-larger-than-x=Os documentos devem ser menores que {0}.
