--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -6323,6 +6323,7 @@ file-uploads=Incărcari Fişier
 file-url=URL fișier (Automatic Translation)
 file-version-is-invalid=Versiunea fișierului nu este validă. (Automatic Translation)
 files=Fişiere
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Completeayă formularul e mai jos pentru a primi indicaţii spre.
 filter=Filtrează
 filter-and-order=Filtrare și comandă (Automatic Translation)
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=Fișierul a fost procesat corect. (Automatic Tr
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Fișierele au fost importate corect. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Firma nu a putut fi stearsa pentru ca are proiecte asociate.
 the-firm-could-not-be-found=Firma nu a putut fi gasita.
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Încărcare certificat (Automatic Translation)
 upload-completed=Incarcare Termianta
 upload-definition=Definiție încărcare (Automatic Translation)
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Incarca Document
 upload-documents-no-larger-than-3000-k=Încărcați documente nu mai mari de 3.000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Incarca Document nu mai mare de {0}.
