--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -6323,6 +6323,7 @@ file-uploads=Nahrané súbory
 file-url=Adresa URL súboru (Automatic Translation)
 file-version-is-invalid=Verzia súboru nie je validná.
 files=Súbory
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Vyplňte nasledujúci formulár, ak chcete získať informácie o smerníkoch jazdy
 filter=Filtre
 filter-and-order=Filter a poradie (Automatic Translation)
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=Súbor bol spracovaný správne. (Automatic Tra
 the-file-x-cannot-be-imported=Súbor <em>{0}</em> sa nedá importovať.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=Súbor <em>{0}</em> sa nedá uložiť.
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Súbory boli importované správne. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Firma nemôže byť zmazaná, pretože je asociovaná s existujúcimi projektami.
 the-firm-could-not-be-found=Firma nebola nájdená.
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Nahrať certifikát (Automatic Translation)
 upload-completed=Nahrávanie ukončené
 upload-definition=Nahrať definíciu
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Nahrať dokument
 upload-documents-no-larger-than-3000-k=Nahrajte dokumenty, ktoré nie sú väčšie ako 3 000 k. (Automatic Translation)
 upload-documents-no-larger-than-x=Nahrajte dokumenty, ktoré niesú väčšie ako {0}.
