--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -6323,6 +6323,7 @@ file-uploads=Prenosi datotek
 file-url=URL datoteke (Automatic Translation)
 file-version-is-invalid=Različica datoteke ni veljavna. (Automatic Translation)
 files=Datoteka
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Izpolnite tale obrazec, če potrebujete usmerjanje vožnje
 filter=Filtri
 filter-and-order=Filtriraj in vrstni red (Automatic Translation)
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=Datoteka je bila pravilno obdelana. (Automatic 
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Datoteke so bile pravilno uvožene. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Podjetja ne morete izbrisati, ker je povezano z nekaterimi projekti.
 the-firm-could-not-be-found=Podjetja ni moč najti.
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Nalaganje potrdila (Automatic Translation)
 upload-completed=Prenos na strežnik končan
 upload-definition=Definicija prenosa (Automatic Translation)
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Prenesi dokument
 upload-documents-no-larger-than-3000-k=Naložite dokumente, ki niso večji od 3000 k. (Automatic Translation)
 upload-documents-no-larger-than-x=Prenesi dokumente, ki niso večji kot {0}.
