--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -6323,6 +6323,7 @@ file-uploads=Uppladdade filer
 file-url=Fil-URL
 file-version-is-invalid=Filversion är ogiltig.
 files=Filer
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Fyll i formuläret för att få vägbeskrivning till
 filter=Filter
 filter-and-order=Filtrera och ordna
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=Filen har bearbetats korrekt.
 the-file-x-cannot-be-imported=Det går inte att importera filen <em>{0}</em>.
 the-file-x-cannot-be-inspected=Det går inte att inspektera filen {0}.
 the-file-x-cannot-be-saved=Det går inte att spara filen <em><em></em>.
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Filerna har importerats korrekt.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Företag som är relaterade till ett projekt kan inte raderas.
 the-firm-could-not-be-found=Företaget kunde inte hittas.
@@ -16505,7 +16505,7 @@ upload-another-file=Ladda upp en annan fil
 upload-certificate=Ladda upp certifikat
 upload-completed=Uppladdningen slutförd
 upload-definition=Överför definition
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Ladda upp dokument
 upload-documents-no-larger-than-3000-k=Ladda upp dokument som inte är större än 3 000 kB.
 upload-documents-no-larger-than-x=Ladda upp dokument som inte är större än {0}.
