--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -6323,6 +6323,7 @@ file-uploads=ஃபைல் அப்லோட்ஸ்
 file-url=கோப்பு URL
 file-version-is-invalid=ஃபைலின் பதிப்பு தவறானது.
 files=கோப்புகள்
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=டிரைவிங் திசைகளைப் பெறுவதற்கு பின்வரும் படிவத்தை நிரப்புக
 filter=வடிகட்டு
 filter-and-order=ஃபில்டர் மற்றும் வரிசைப்படுத்துதல்
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=The file was processed correctly. (Automatic Co
 the-file-x-cannot-be-imported=<em> {0} </em> ஃபைலை இறக்குமதி செய்ய முடியாது.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=<em> {0} </em> கோப்பை சேமிக்க முடியாது.
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=ஃபைல்கள் சரியாக import செய்யப்பட்டன.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=The firm cannot be deleted because it has associated projects. (Automatic Copy)
 the-firm-could-not-be-found=Firm காணப்படவில்லை.
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Upload Certificate (Automatic Copy)
 upload-completed=பதிவேற்றம் முடிந்தது
 upload-definition=வரையறை இணைக்க
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=ஆவணத்தை பதிவேற்றவும்
 upload-documents-no-larger-than-3000-k=Upload documents no larger than 3,000k. (Automatic Copy)
 upload-documents-no-larger-than-x=ஆவணங்களை {0} விட பெரியதாக பதிவேற்றவும்.
