--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -6323,6 +6323,7 @@ file-uploads=Відправка файлу
 file-url=URL-адреса файлу (Automatic Translation)
 file-version-is-invalid=Неприпустима версія файлу. (Automatic Translation)
 files=Файл
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Заповніть форму для того, щоби отримати маршрути.
 filter=Фільтри
 filter-and-order=Фільтр і порядок (Automatic Translation)
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=Файл оброблено правильно.
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Файли імпортовано правильно. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Фірма не може бути видалена, адже вона має асоційовані проекти.
 the-firm-could-not-be-found=Фірма не знайдена.
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Передати сертифікат (Automatic Translation)
 upload-completed=Завантаження завершено
 upload-definition=Визначення передавання (Automatic Translation)
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Завантажити документ
 upload-documents-no-larger-than-3000-k=Завантажувати документи розміром не більше 3 000 к. (Automatic Translation)
 upload-documents-no-larger-than-x=Завантажити документи розміром не більш {0}.
