--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -6323,6 +6323,7 @@ file-uploads=Tài liệu tải lên
 file-url=URL tệp (Automatic Translation)
 file-version-is-invalid=Phiên bản tập tin không hợp lệ.
 files=Tập tin
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Điền vào mẫu để nhận được chỉ dẫn lái xe tới
 filter=Lọc
 filter-and-order=Lọc và đặt hàng (Automatic Translation)
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=Tệp đã được xử lý đúng cách. (Aut
 the-file-x-cannot-be-imported=Tập tin <em>{0}</em> không thể được nhập khẩu.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=Tập tin <em>{0}</em> không thể được lưu lại.
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Các tệp đã được chuyển nhập đúng. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Không thể xóa doanh nghiệp vì đang có ràng buộc với dự án.
 the-firm-could-not-be-found=Không tìm thấy doanh nghiệp.
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Tải lên chứng chỉ (Automatic Translation)
 upload-completed=Tải lên thành công
 upload-definition=Tải lên Định nghĩa
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Tải lên tài liệu
 upload-documents-no-larger-than-3000-k=Tải lên tài liệu không lớn hơn 3, 000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Tài liệu tải lên không lớn hơn {0}.
