--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -6323,6 +6323,7 @@ file-uploads=文件上传
 file-url=文件 URL
 file-version-is-invalid=文件版本无效。
 files=文件
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=填写下面表单以得到操作指导
 filter=过滤器
 filter-and-order=筛选条件与顺序
@@ -14860,7 +14861,6 @@ the-file-was-processed-correctly=已正确处理该文件。
 the-file-x-cannot-be-imported=文件<em>{0}</em>无法导入。
 the-file-x-cannot-be-inspected=无法检查文件 {0}。
 the-file-x-cannot-be-saved=文件<em>{0}</em>无法保存。
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=文件已正确导入。
 the-firm-cannot-be-deleted-because-it-has-associated-projects=公司无法被删除，因为与项目关联。
 the-firm-could-not-be-found=找不到公司。
@@ -16507,7 +16507,7 @@ upload-another-file=上传其他文件
 upload-certificate=上传证书
 upload-completed=上传完成
 upload-definition=上传定义
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=上传文档
 upload-documents-no-larger-than-3000-k=上传文件不能大于 3,000k。
 upload-documents-no-larger-than-x=上传文件不能大于{0}。
