--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -6323,6 +6323,7 @@ file-uploads=Càrregues de fitxers
 file-url=URL del fitxer
 file-version-is-invalid=La versió del fitxer no és vàlida.
 files=Fitxers
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Ompliu el següent formulari per rebre indicacions de com arribar a
 filter=Filtre
 filter-and-order=Filtre i ordenació
@@ -14860,7 +14861,6 @@ the-file-was-processed-correctly=El fitxer s'ha processat correctament.
 the-file-x-cannot-be-imported=El fitxer <em>{0}</em> no es pot importar.
 the-file-x-cannot-be-inspected=El fitxer {0} no es pot inspeccionar.
 the-file-x-cannot-be-saved=El fitxer <em>{0}</em> no es pot desar.
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Els fitxers s'han importat correctament.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=L'empresa no es pot suprimir perquè té projectes associats.
 the-firm-could-not-be-found=No s'ha trobat la companyia.
@@ -16507,7 +16507,7 @@ upload-another-file=Penja un altre fitxer
 upload-certificate=Penja el certificat
 upload-completed=S'ha completat la transferència
 upload-definition=Penja la definició
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Penja el document
 upload-documents-no-larger-than-3000-k=No pengeu documents més grans de 3.000 KB.
 upload-documents-no-larger-than-x=No pengeu documents més grans de {0}.
