--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
@@ -6323,6 +6323,7 @@ file-uploads=File Uploads
 file-url=File URL
 file-version-is-invalid=File version is invalid.
 files=Files
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media.
 fill-out-the-following-form-to-get-driving-directions-to=Fill out the following form to get driving directions to
 filter=Filter
 filter-and-order=Filter and Order
@@ -14864,7 +14865,6 @@ the-file-was-processed-correctly=The file was processed correctly.
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected.
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved.
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media.
 the-files-were-imported-correctly=The files were imported correctly.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=The firm cannot be deleted because it has associated projects.
 the-firm-could-not-be-found=The firm could not be found.
@@ -16511,7 +16511,7 @@ upload-another-file=Upload Another File
 upload-certificate=Upload Certificate
 upload-completed=Upload Completed
 upload-definition=Upload Definition
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer
+upload-directly-from-users-computer=Upload Directly from the User's Computer
 upload-document=Upload Document
 upload-documents-no-larger-than-3000-k=Upload documents no larger than 3,000k.
 upload-documents-no-larger-than-x=Upload documents no larger than {0}.
