--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -6323,6 +6323,7 @@ file-uploads=Téléversements de fichiers
 file-url=URL du fichier
 file-version-is-invalid=La version du fichier est invalide.
 files=Dossiers
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Complétez le formulaire suivant afin obtenir des informations pour aller dans la direction de
 filter=Filtre
 filter-and-order=Filtrer et trier
@@ -14860,7 +14861,6 @@ the-file-was-processed-correctly=Le fichier a été traité correctement.
 the-file-x-cannot-be-imported=Le fichier <em>{0}</em> ne peut pas être importé.
 the-file-x-cannot-be-inspected=Le fichier {0} ne peut pas être inspecté.
 the-file-x-cannot-be-saved=Le fichier <em>{0}</em> ne peut pas être sauvegardé.
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Les fichiers ont été correctement importés.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=La société ne peut être supprimée car elle contient des projets
 the-firm-could-not-be-found=La société n'a pu être trouvée.
@@ -16507,7 +16507,7 @@ upload-another-file=Téléverser un autre fichier
 upload-certificate=Téléverser un certificat
 upload-completed=Le Téléchargement est terminé
 upload-definition=Téléverser la définition
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Document de téléchargement
 upload-documents-no-larger-than-3000-k=Téléversez des documents ne dépassant pas 3 000 Ko.
 upload-documents-no-larger-than-x=Télécharger des documents dont la taille n'excède pas {0}.
