--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
@@ -6323,6 +6323,7 @@ file-uploads=Slanja datoteka
 file-url=File URL (Automatic Copy)
 file-version-is-invalid=Verzija datoteke je neispravna
 files=Datoteke
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Ispunite sljedeći obrazac kako bi dobili upute za vožnju do
 filter=Filtar
 filter-and-order=Filter and Order (Automatic Copy)
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=The file was processed correctly. (Automatic Co
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Tvrtka se ne može obrisati jer ima povezane projekte.
 the-firm-could-not-be-found=Tvrtka se ne može pronaći.
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Upload Certificate (Automatic Copy)
 upload-completed=Upload dovršen
 upload-definition=Upload Definition (Automatic Copy)
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Upload dokumenata
 upload-documents-no-larger-than-3000-k=Upload documents no larger than 3,000k. (Automatic Copy)
 upload-documents-no-larger-than-x=Pošalji dokumente koji nisu veći od {0}.
