--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -6323,6 +6323,7 @@ file-uploads=Fájlfeltöltések
 file-url=Fájl URL
 file-version-is-invalid=A fájl verzió érvénytelen.
 files=Fájlok
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=A következő űrlap alapján útmutatást kaphat, úti cél:
 filter=Szűrő
 filter-and-order=Szűrés és rendezés
@@ -14861,7 +14862,6 @@ the-file-was-processed-correctly=A fájl feldolgozása sikeres volt.
 the-file-x-cannot-be-imported=A(z) <em>{0}</em> fájl nem importálható.
 the-file-x-cannot-be-inspected=A {0} fájl nem vizsgálható.
 the-file-x-cannot-be-saved=A(z) <em>{0}</em> fájl nem menthető.
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=A fájlok importálása sikeres volt.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=A cég nem törölhető, mert projektek tartoznak hozzá.
 the-firm-could-not-be-found=A cég nem található.
@@ -16508,7 +16508,7 @@ upload-another-file=Másik fájl feltöltése
 upload-certificate=Tanúsítvány feltöltése
 upload-completed=A feltöltés kész
 upload-definition=Definíció frissítése
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Dokumentum feltöltése
 upload-documents-no-larger-than-3000-k=A feltölthető dokumentumok maximális mérete 3000 kB.
 upload-documents-no-larger-than-x=A feltölthető dokumentumok maximális mérete: {0}.
