--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -6323,6 +6323,7 @@ file-uploads=העלאות קבצים
 file-url=כתובת URL של קובץ (Automatic Translation)
 file-version-is-invalid=גרסת הקובץ לא בתוקף.
 files=קבצים
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=מלא את הטופס הבא כדי לקבל הוראות הגעה ל
 filter=פילטר
 filter-and-order=סנן וסדר
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=הקובץ עובד כראוי. (Automatic Tran
 the-file-x-cannot-be-imported=לא ניתן לייבא את הקובץ (<em>{0}</em>).
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=לא ניתן לשמור את הקובץ (<em>{0}</em>).
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=הקבצים יובאו כהלכה.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=החברה לא יכולה להמחק כיוון שיש לה פרוייקטים מקושרים
 the-firm-could-not-be-found=החברה לא נמצאה
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=העלה אישור
 upload-completed=ההעלאה הושלמה
 upload-definition=העלה הגדרה
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=העלה מסמך
 upload-documents-no-larger-than-3000-k=העלאת מסמכים לא גדולים מ-3, 000k. (Automatic Translation)
 upload-documents-no-larger-than-x=העלה מסמכים שאינם גדולים מ-{0}.
