--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -6323,6 +6323,7 @@ file-uploads=Failų nusiuntimai (Automatic Translation)
 file-url=Failo URL (Automatic Translation)
 file-version-is-invalid=Failo versija neleistina. (Automatic Translation)
 files=Failus (Automatic Translation)
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Užpildykite šią formą, kad gautumėte važiavimo nuorodas į (Automatic Translation)
 filter=Filtras (Automatic Translation)
 filter-and-order=Filtras ir užsakymas (Automatic Translation)
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=Failas apdorotas teisingai. (Automatic Translat
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Failai buvo importuoti teisingai. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Įmonės panaikinti negalima, nes ji turi susietų projektų. (Automatic Translation)
 the-firm-could-not-be-found=Nepavyko rasti įmonės. (Automatic Translation)
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Nusiųsti sertifikatą (Automatic Translation)
 upload-completed=Nusiųsti baigta (Automatic Translation)
 upload-definition=Nusiuntimo apibrėžimas (Automatic Translation)
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Nusiųsti dokumentą (Automatic Translation)
 upload-documents-no-larger-than-3000-k=Įkelkite dokumentus, ne didesnius kaip 3 000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Upload documents no larger than {0}. (Automatic Copy)
