--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -6323,6 +6323,7 @@ file-uploads=Muat Naik Fail (Automatic Translation)
 file-url=URL Fail (Automatic Translation)
 file-version-is-invalid=Versi fail tidak sah. (Automatic Translation)
 files=Fail (Automatic Translation)
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Isi borang berikut untuk mendapatkan arahan memandu (Automatic Translation)
 filter=Penapis (Automatic Translation)
 filter-and-order=Penapis dan Pesanan (Automatic Translation)
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=Fail telah diproses dengan betul. (Automatic Tr
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Fail telah diimport dengan betul. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Firma itu tidak boleh dihapuskan kerana ia mempunyai projek yang berkaitan. (Automatic Translation)
 the-firm-could-not-be-found=Firma itu tidak dapat dijumpai. (Automatic Translation)
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Sijil Muat Naik (Automatic Translation)
 upload-completed=Muat Naik Selesai (Automatic Translation)
 upload-definition=Muat Naik Definisi (Automatic Translation)
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Muat Naik Dokumen (Automatic Translation)
 upload-documents-no-larger-than-3000-k=Muat naik dokumen tidak lebih besar daripada 3,000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Upload documents no larger than {0}. (Automatic Copy)
