--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -6323,6 +6323,7 @@ file-uploads=Загрузки файлов
 file-url=URL-адрес файла (Automatic Translation)
 file-version-is-invalid=Неверная версия файла.
 files=Файлы
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Заполните форму, чтобы получить направления
 filter=Фильтр
 filter-and-order=Фильтр и порядок (Automatic Translation)
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=Файл был обработан правил
 the-file-x-cannot-be-imported=Файл <em>{0}</em> не может быть импортирован.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=Файл <em>{0}</em> не может быть сохранен.
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Файлы были импортированы правильно. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Фирма не может быть удалена, так как она имеет ассоциированные проекты.
 the-firm-could-not-be-found=Фирма не найдена.
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Сертификат загрузки (Automatic Translation)
 upload-completed=Загрузка завершена
 upload-definition=Обновить определение
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Загрузить документ
 upload-documents-no-larger-than-3000-k=Загрузка документов не более 3000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Загрузите документы размером не более {0}.
