--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -6323,6 +6323,7 @@ file-uploads=Dosya yükleme
 file-url=Dosya URL'si (Automatic Translation)
 file-version-is-invalid=Dosya sürümü geçersiz. (Automatic Translation)
 files=Dosya
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=Sürüş açıklamalarına ulaşmak için formu doldurun.
 filter=Filtreler
 filter-and-order=Filtre uygula ve Sipariş Ver (Automatic Translation)
@@ -14858,7 +14859,6 @@ the-file-was-processed-correctly=Dosya doğru işlendi. (Automatic Translation)
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Dosyalar doğru şekilde alındı. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Şirket silinemedi çünkü bağlantılı projelere sahip.
 the-firm-could-not-be-found=Şirket bulunamadı.
@@ -16505,7 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=SertifikaYı Karşıya Yükle (Automatic Translation)
 upload-completed=Yükleme Tamamlandı.
 upload-definition=Karşıya Yükleme Tanımı (Automatic Translation)
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=Belge Yükle.
 upload-documents-no-larger-than-3000-k=Belgeleri 3.000 binden büyük yüklemeyin. (Automatic Translation)
 upload-documents-no-larger-than-x={0} büyüklüğünden daha büyük dosya yüklemeyin.
