--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -6323,6 +6323,7 @@ file-uploads=檔案上傳
 file-url=檔案 URL
 file-version-is-invalid=檔案版本不正確。
 files=檔案
+files-can-be-stored-in-an-object-entry-or-in-a-specific-folder-in-documents-and-media=Files can be stored in an object entry or in a specific folder in Documents and Media. (Automatic Copy)
 fill-out-the-following-form-to-get-driving-directions-to=填好下列表格以取得方向到
 filter=過濾
 filter-and-order=篩選條件與排序
@@ -14859,7 +14860,6 @@ the-file-was-processed-correctly=已正確處理該檔案。
 the-file-x-cannot-be-imported=檔案<em>{0}</em>不能被匯入。
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected.
 the-file-x-cannot-be-saved=檔案<em>{0}</em>不能被儲存。
-the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=欄位已被正確匯入。
 the-firm-cannot-be-deleted-because-it-has-associated-projects=公司不能被刪除因為它有關聯到專案。
 the-firm-could-not-be-found=找不到公司。
@@ -16506,7 +16506,7 @@ upload-another-file=上傳其他檔案
 upload-certificate=上傳憑證
 upload-completed=上傳完成
 upload-definition=上傳定義
-upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer (Automatic Copy)
 upload-document=上傳文件
 upload-documents-no-larger-than-3000-k=上傳文件不可以大於 3,000k。
 upload-documents-no-larger-than-x=上傳文件不可以大於 {0}。
